# tunas

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docs.yml  publish.yml  test.yml
data/meetData/: Meet Results-<Manual Times>-01Jul2024-001.cl2
data/timeStandards/: jnat-2025.xlsx  ~$AGC-WinSpr2025.xlsx
database/: __init__.py  club.py  meet.py  sdif.py  swim.py  swimmer.py  util.py
database/util/: __init__.py  sdif.py  stime.py  time.py
docs/: README.md  architecture.md  cl2_format.md  cookbook.md  enums.md  event.md  exceptions.md  getting_started.md  hy3_format.md  index.md  models.md  parsing.md  reference.md  standards.md  time.md
docs/about/: architecture.md  index.md
docs/formats/: cl2_format.md  hy3_format.md  index.md
docs/guide/: cookbook.md  getting_started.md  index.md  models.md  parsing.md
docs/reference/: enums.md  event_time.md  exceptions.md  geography.md  index.md  models.md  (+2 more)
git/: .gitignore
scripts/: convert_standards.py
src/: _test.py  dataprocessor.py  main.py  relaymode.py  timestandard.py
tests/: conftest.py  poem.txt  test_adversarial.py  test_basic.py  test_data.cl2  test_database.py  test_edge_coverage.py  test_enums.py  test_error_model.py  test_golden_file.py  test_golden_hy3.py  test_golden_relay.py  test_init_exports.py  test_models.py  test_parser.py  test_parser_hy3.py  test_parser_hy3_io.py  test_parser_io.py  test_parser_parallel.py  test_parser_records.py  test_util.py
tuna/: __main__.py  database.py  dataprocessor.py  timestandard.py  util.py
tunas/: __main__.py  database.py  interface.py  parser.py  relaygen.py  scraper.py  timestandard.py  util.py
tunas_old/: interface.py  timestandard.py
tunas_refactor/: __main__.py  interface.py  parser.py  util.py
(+849 files in other folders)
