[project]
name = "tunas"
dynamic = ["version"]
description = "USA Swimming meet result (.cl2 / SDIF v3) parser and analysis library"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andy Joe", email = "ajoe2468@gmail.com" }]
keywords = ["swimming", "sdif", "cl2", "hy-tek", "usa-swimming", "swim-meet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ajoe2/tunas"
Documentation = "https://github.com/ajoe2/tunas/tree/main/docs"
Repository = "https://github.com/ajoe2/tunas"
Issues = "https://github.com/ajoe2/tunas/issues"
Changelog = "https://github.com/ajoe2/tunas/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/tunas/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tunas"]

[tool.hatch.build.targets.sdist]
include = [
    "src/tunas",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "openpyxl>=3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/tunas"]
